--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -53,39 +52,6 @@
         app:fab_colorNormal="@color/groups.blue_color"
         app:fab_colorPressed="@color/groups.blue_color"
         app:fab_icon="@drawable/ic_add_comments" />
-
-
-    <!--<com.mycity4kids.widget.CustomFontEditText-->
-    <!--android:id="@+id/writeCommentEditText"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_toLeftOf="@+id/addCommentImageView"-->
-    <!--android:background="@null"-->
-    <!--android:hint="Add a comment"-->
-    <!--android:minHeight="48dp"-->
-    <!--android:paddingLeft="6dp"-->
-    <!--android:paddingRight="6dp"-->
-    <!--android:textColor="@color/groups.light_black_color" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/addCommentImageView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="49dp"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:background="@color/groups.blue_color"-->
-    <!--android:paddingLeft="16dp"-->
-    <!--android:paddingRight="16dp"-->
-    <!--android:src="@drawable/ic_gp_add_response" />-->
-
-    <!--<View-->
-    <!--android:id="@+id/topLineView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:layout_above="@+id/writeCommentEditText"-->
-    <!--android:layout_toLeftOf="@+id/addCommentImageView"-->
-    <!--android:background="@color/light_underline" />-->
 
     <RelativeLayout
         android:id="@+id/postSettingsContainerMain"
@@ -164,6 +130,48 @@
                 android:text="REPORT POST"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/deletePostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="DELETE POST"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/blockUserTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="BLOCK THE USER"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/pinPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="PIN THIS POST TO TOP"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
                 app:fontName="open_sans.ttf" />
         </LinearLayout>
     </RelativeLayout>
