--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_poll_post_item.xml
@@ -129,7 +129,7 @@
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/pollOption1ProgressTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/pollResult1TextView"
@@ -183,7 +183,7 @@
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/pollOption2ProgressTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/pollResult2TextView"
@@ -243,7 +243,7 @@
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/pollOption3ProgressTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/pollResult3TextView"
@@ -304,7 +304,7 @@
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/pollOption4ProgressTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/pollResult4TextView"
@@ -313,35 +313,6 @@
             android:text="40%"
             android:visibility="invisible" />
     </RelativeLayout>
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/upvoteTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/pollOption2ProgressBar"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:drawableLeft="@drawable/fav_icon"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:gravity="bottom"-->
-    <!--android:text="20 Helpful"-->
-    <!--android:textColor="@color/groups.light_black_color"-->
-    <!--android:textSize="10sp"-->
-    <!--app:fontName="oswald.ttf" />-->
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/downvoteTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/pollOption2ProgressBar"-->
-    <!--android:layout_marginLeft="5dp"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:layout_toRightOf="@+id/upvoteTextView"-->
-    <!--android:drawableLeft="@drawable/fav_icon"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:gravity="bottom"-->
-    <!--android:text="0 Not Helpful"-->
-    <!--android:textColor="@color/ad.comment.date"-->
-    <!--android:textSize="10sp"-->
-    <!--app:fontName="oswald.ttf" />-->
 
     <LinearLayout
         android:id="@+id/upvoteContainer"
@@ -397,22 +368,6 @@
             app:fontName="oswald.ttf" />
     </LinearLayout>
 
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/postCommentsTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/option4Container"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_toLeftOf="@+id/shareTextView"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:drawableRight="@drawable/ic_comments"-->
-    <!--android:gravity="bottom"-->
-    <!--android:padding="5dp"-->
-    <!--android:text="20"-->
-    <!--android:textColor="@color/ad.comment.date"-->
-    <!--android:textSize="12sp"-->
-    <!--app:fontName="oswald.ttf" />-->
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/postCommentsTextView"
         android:layout_width="wrap_content"
