--- a/MyCity4Kids/MyCity4Kids/res/layout/group_settings_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_settings_activity.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="5dp"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title">
@@ -24,23 +25,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/user_activities.toolbar.title"
+                android:text="@string/myprofile.section.settings_label"
                 android:textColor="@color/user_activities.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/saveGroupDetailsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:padding="12dp"
-                android:text="@string/complete_blogger_profile.save"
-                android:textColor="@color/editor.publish"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -74,12 +63,12 @@
             android:layout_alignBottom="@+id/groupImageView"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="18dp"
-            android:drawableLeft="@drawable/ic_share_white"
+            android:drawableLeft="@drawable/ic_group_white"
             android:drawablePadding="10dp"
             android:gravity="center"
             android:text="247 members"
             android:textColor="@color/white"
-            android:textSize="11sp"
+            android:textSize="14sp"
             app:fontName="oswald.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
