--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -37,7 +37,7 @@
         android:maxLines="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="Priya Sachdeva"
+        android:text=""
         android:textColor="@color/ad.comment.username"
         android:textSize="12sp"
         app:fontName="oswald_regular.ttf" />
