--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/user_activities.toolbar.title"
+                android:text="@string/groups.summary"
                 android:textColor="@color/user_activities.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
