--- a/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
@@ -160,19 +160,61 @@
         android:background="@color/white">
 
         <ImageView
-            android:id="@+id/anonymousImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:padding="14dp"
-            android:src="@drawable/ic_followers" />
-
-        <ImageView
             android:id="@+id/togglePollOptionImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:padding="14dp"
             android:src="@drawable/ic_followers" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/togglePollOptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/togglePollOptionImageView"
+            android:layout_alignTop="@+id/togglePollOptionImageView"
+            android:layout_toEndOf="@+id/togglePollOptionImageView"
+            android:layout_toRightOf="@+id/togglePollOptionImageView"
+            android:gravity="center_vertical"
+            android:paddingRight="10dp"
+            android:text="@string/groups.add_image" />
+
+        <ImageView
+            android:id="@+id/anonymousImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/anonymousTextView"
+            android:padding="14dp"
+            android:src="@drawable/ic_followers" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/anonymousTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/anonymousImageView"
+            android:layout_alignTop="@+id/anonymousImageView"
+            android:layout_toLeftOf="@+id/anonymousCheckbox"
+            android:gravity="center_vertical"
+            android:paddingRight="10dp"
+            android:text="@string/groups.anonymous" />
+
+        <CheckBox
+            android:id="@+id/anonymousCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:button="@drawable/language_selector_checkbox"
+            android:checked="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="center_vertical"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="2dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/app_settings.edit_prefs.pref_lang_name"
+            android:textSize="16sp" />
     </RelativeLayout>
 </RelativeLayout>
